2011-01-27  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r76891.
        http://trac.webkit.org/changeset/76891
        https://bugs.webkit.org/show_bug.cgi?id=53280

        Makes every layout test crash (Requested by othermaciej on
        #webkit).

        * page/EventHandler.cpp:
        * page/EventHandler.h:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::styleDidChange):

2011-01-27  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed, rolling out r76839.
        http://trac.webkit.org/changeset/76839
        https://bugs.webkit.org/show_bug.cgi?id=49744

        broke pixel tests

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::localCaretRect):

2011-01-27  Emil A Eklund  <eae@chromium.org>

        Reviewed by Darin Adler.

        contentEditable formatBlock crashes on divs with contenteditable="false"
        https://bugs.webkit.org/show_bug.cgi?id=53263

        Check if editableRootForPosition returns null for position.

        Test: editing/execCommand/format-block-contenteditable-false.html

        * editing/FormatBlockCommand.cpp:
        (WebCore::FormatBlockCommand::formatRange):

2011-01-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        Remove RenderMedia members that aren't used.
        https://bugs.webkit.org/show_bug.cgi?id=53245

        Refactoring, no change in behavior, so no new tests.

        * rendering/RenderMedia.h: Removed unused member variables.

2011-01-27  Michael Saboff  <msaboff@apple.com>

        Reviewed by Darin Adler.

        Potentially Unsafe HashSet of RuntimeObject* in RootObject definition
        https://bugs.webkit.org/show_bug.cgi?id=53271

        Precautionary change.
        Changed RootObject to use WeakGCMap instead of HashSet.
        Found will looking for another issue, but can't produce a test case
        that is problematic.  THerefore there aren't any new tests.
